victoria-metrics/overlays/observability/vmagent-vm-victoria-metrics-k8s-stack.Ingress.yaml
---
# Source: victoria-metrics-k8s-stack/templates/victoria-metrics-operator/vmcluster/ingress-select.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    cert-manager.io/issuer: "cluster-issuer-selfsigned" 
    cert-manager.io/issuer-kind: "ClusterIssuer"
    metallb.uniberse.tf/address-pool: default
    prometheus.io/scrape: "true"
  name: vmagent-vm-victoria-metrics-k8s-stack
  namespace: observability
spec:
  ingressClassName: kong
  rules:
    - host: victoria-metrics-agent.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmagent-vm-victoria-metrics-k8s-stack
                port:
                  name: http
  tls:
    - hosts:
        - victoria-metrics-agent.k3s
      secretName: victoria-metrics-agent.k3s.cloud-tls
